--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "yarn build && netlify deploy --prod --dir=build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
